--- a/unblocked.conf
+++ b/unblocked.conf
@@ -10,20 +10,20 @@
 # Danish blocked domains
     local-zone: "dk" transparent
     local-data: "popcorntime.dk.              IN A 77.66.80.49"
-    local-zone: "canadagoosebillig.dk.	    	IN	A	91.218.114.105"
-    local-zone: "canadagoosejakker.dk.	    	IN	A	198.177.117.22"
-    local-zone: "canadagoosetilbud.dk.	    	IN	A	167.160.12.181"
-    local-zone: "christianlouboutindk.dk.     IN	A	213.152.181.39"
-    local-zone: "jakker2014.dk.		    	      IN	A	107.160.75.154"
-    local-zone: "ellosjakker.dk.		    	    IN	A	107.160.75.154"
-    local-zone: "korgaard-marsvin.dk.	      	IN	A	199.83.130.236"
-    local-zone: "korgaard-marsvin.dk.	        IN	A	185.11.125.222"
-    local-zone: "miintojakker.dk.	    	      IN	A	107.160.75.154"
-    local-zone: "monclerjakker.dk.	    	    IN	A	213.152.181.37"
-    local-zone: "mulberryudsalg.dk.	    	    IN	A	167.160.12.181"
-    local-zone: "nikeairmaxleopard.dk.	      IN	A	31.222.201.62"
-    local-zone: "nikefreerunidanmark.dk.	    IN	A	178.216.51.112"
-    local-zone: "nikefreerunudsalg.dk.	    	IN	CNAME	dc1.baofengdns.net.
-    local-zone: "rayban-solbriller.dk.	    	IN	A	5.175.193.67"
-    local-zone: "vinterjakkertildamer.dk.     IN	A	107.160.75.154"
-    local-zone: "vinterjakkezalando.dk.	    	IN	A	199.124.63.196"
+    local-data: "canadagoosebillig.dk.        IN A 91.218.114.105"
+    local-data: "canadagoosejakker.dk.        IN A 198.177.117.22"
+    local-data: "canadagoosetilbud.dk.        IN A 167.160.12.181"
+    local-data: "christianlouboutindk.dk.     IN A 213.152.181.39"
+    local-data: "jakker2014.dk.               IN A 107.160.75.154"
+    local-data: "ellosjakker.dk.              IN A 107.160.75.154"
+    local-data: "korgaard-marsvin.dk.         IN A 199.83.130.236"
+    local-data: "korgaard-marsvin.dk.         IN A 185.11.125.222"
+    local-data: "miintojakker.dk.             IN A 107.160.75.154"
+    local-data: "monclerjakker.dk.            IN A 213.152.181.37"
+    local-data: "mulberryudsalg.dk.           IN A 167.160.12.181"
+    local-data: "nikeairmaxleopard.dk.        IN A 31.222.201.62"
+    local-data: "nikefreerunidanmark.dk.      IN A 178.216.51.112"
+    local-data: "nikefreerunudsalg.dk.        IN CNAME dc1.baofengdns.net."
+    local-data: "rayban-solbriller.dk.        IN A 5.175.193.67"
+    local-data: "vinterjakkertildamer.dk.     IN A 107.160.75.154"
+    local-data: "vinterjakkezalando.dk.       IN A 199.124.63.196"
