Some need the www. version too

--- a/unblocked.conf
+++ b/unblocked.conf
@@ -20,6 +20,7 @@
     local-data: "korgaard-marsvin.dk.         IN A 185.11.125.222"
     local-data: "miintojakker.dk.             IN A 107.160.75.154"
     local-data: "monclerjakker.dk.            IN A 213.152.181.37"
+    local-data: "www.monclerjakker.dk.            IN A 213.152.181.37"
     local-data: "mulberryudsalg.dk.           IN A 167.160.12.181"
     local-data: "nikeairmaxleopard.dk.        IN A 31.222.201.62"
     local-data: "nikefreerunidanmark.dk.      IN A 178.216.51.112"
