Okay I can explain this
No I can't

--- a/unblocked.conf
+++ b/unblocked.conf
@@ -1,30 +1,9 @@
 
 # include file for Unbound nameserver
-# suggested use:
-# Install Dnssec-Trigger from
-# http://www.nlnetlabs.nl/projects/dnssec-trigger
-# Clone the Git repo somewhere                                                                                                                                         # include this file in Unbound configuration /etc/unbound/unbound.conf
-# The command would be something like:
-# include: "/etc/unbound-unblock/unblocked.conf"
+# i don't give sum fuk for this, really
 
 # Danish blocked domains
     local-zone: "dk" transparent
-    local-data: "popcorntime.dk.              IN A 77.66.80.49"
-    local-data: "canadagoosebillig.dk.        IN A 91.218.114.105"
-    local-data: "canadagoosejakker.dk.        IN A 198.177.117.22"
-    local-data: "canadagoosetilbud.dk.        IN A 167.160.12.181"
-    local-data: "christianlouboutindk.dk.     IN A 213.152.181.39"
-    local-data: "jakker2014.dk.               IN A 107.160.75.154"
-    local-data: "ellosjakker.dk.              IN A 107.160.75.154"
-    local-data: "korgaard-marsvin.dk.         IN A 199.83.130.236"
-    local-data: "korgaard-marsvin.dk.         IN A 185.11.125.222"
-    local-data: "miintojakker.dk.             IN A 107.160.75.154"
-    local-data: "monclerjakker.dk.            IN A 213.152.181.37"
-    local-data: "www.monclerjakker.dk.            IN A 213.152.181.37"
-    local-data: "mulberryudsalg.dk.           IN A 167.160.12.181"
-    local-data: "nikeairmaxleopard.dk.        IN A 31.222.201.62"
-    local-data: "nikefreerunidanmark.dk.      IN A 178.216.51.112"
-    local-data: "nikefreerunudsalg.dk.        IN CNAME dc1.baofengdns.net."
-    local-data: "rayban-solbriller.dk.        IN A 5.175.193.67"
-    local-data: "vinterjakkertildamer.dk.     IN A 107.160.75.154"
-    local-data: "vinterjakkezalando.dk.       IN A 199.124.63.196"
+    local-data: "nhentai.net			IN A 141.101.120.55"
+    local-data: "static.nhentai.net		IN A 141.101.120.55"
+    local-data: "t.nhentai.net			IN A 185.2.83.13"
