I can explain this again
Nope, still couldn't explain shit

--- a/unblocked.conf
+++ b/unblocked.conf
@@ -5,5 +5,7 @@
 # Danish blocked domains
     local-zone: "dk" transparent
     local-data: "nhentai.net			IN A 141.101.120.55"
+    local-data: "nhentai.net			IN A 141.101.120.54"
     local-data: "static.nhentai.net		IN A 141.101.120.55"
     local-data: "t.nhentai.net			IN A 185.2.83.13"
+    local-data: "i.nhentai.net			IN A 185.2.83.13"
