--- a/unblocked.conf
+++ b/unblocked.conf
@@ -1,11 +1,15 @@
 
-# include file for Unbound nameserver
-# i don't give sum fuk for this, really
+# I dun gib sum fuk again
 
-# Danish blocked domains
-    local-zone: "dk" transparent
+# blocked domains
+    local-zone: "." transparent
     local-data: "nhentai.net			IN A 141.101.120.55"
     local-data: "nhentai.net			IN A 141.101.120.54"
+    local-data: "nhentai.net			IN AAAA 2400:cb00:2048:1::8d65:7836"
     local-data: "static.nhentai.net		IN A 141.101.120.55"
+    local-data: "static.nhentai.net		IN AAAA 2400:cb00:2048:1::8d65:7836"
     local-data: "t.nhentai.net			IN A 185.2.83.13"
     local-data: "i.nhentai.net			IN A 185.2.83.13"
+
+    local-zone: "nekopoi.band." redirect
+    local-data: "nekopoi.band.				3600 IN A 104.24.101.176"
