changed nekopoi URL structure

--- a/unblocked.conf
+++ b/unblocked.conf
@@ -11,5 +11,5 @@
     local-data: "t.nhentai.net			IN A 185.2.83.13"
     local-data: "i.nhentai.net			IN A 185.2.83.13"
 
-    local-zone: "nekopoi.band." redirect
-    local-data: "nekopoi.band.				3600 IN A 104.24.101.176"
+    local-zone: "nekopoi." redirect
+    local-data: "nekopoi.				3600 IN A 104.24.101.176"
