fixing up the structure

--- a/unblocked.conf
+++ b/unblocked.conf
@@ -2,14 +2,10 @@
 # I dun gib sum fuk again
 
 # blocked domains
-    local-zone: "." transparent
-    local-data: "nhentai.net			IN A 141.101.120.55"
-    local-data: "nhentai.net			IN A 141.101.120.54"
-    local-data: "nhentai.net			IN AAAA 2400:cb00:2048:1::8d65:7836"
-    local-data: "static.nhentai.net		IN A 141.101.120.55"
-    local-data: "static.nhentai.net		IN AAAA 2400:cb00:2048:1::8d65:7836"
-    local-data: "t.nhentai.net			IN A 185.2.83.13"
-    local-data: "i.nhentai.net			IN A 185.2.83.13"
+local-zone: "nhentai.net." redirect
+local-data: "nhentai.net			IN A 141.101.120.55"
+local-data: "nhentai.net			IN A 141.101.120.54"
+local-data: "nhentai.net			IN AAAA 2400:cb00:2048:1::8d65:7836"
 
-    local-zone: "nekopoi." redirect
-    local-data: "nekopoi.				3600 IN A 104.24.101.176"
+local-zone: "nekopoi.band." redirect
+local-data: "nekopoi.band.				3600 IN A 104.24.101.176"
